[gd_scene load_steps=15 format=3 uid="uid://dluodvk8egbqt"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_0y6ke"]
[ext_resource type="Texture2D" uid="uid://brfdw2fedw2hd" path="res://scenes/player/player.png" id="1_6gdl2"]
[ext_resource type="AudioStream" uid="uid://q2tveiayd3rs" path="res://scenes/player/laserShoot(1).wav" id="3_oshp0"]
[ext_resource type="AudioStream" uid="uid://c4qn853ddldhf" path="res://scenes/player/jump.wav" id="4_wbh78"]
[ext_resource type="AudioStream" uid="uid://dwu3kglk0ndk1" path="res://scenes/player/explosion.wav" id="5_2mt8x"]
[ext_resource type="AudioStream" uid="uid://bbq8s1d4beces" path="res://scenes/player/hitHurt(2).wav" id="6_ho82w"]
[ext_resource type="AudioStream" uid="uid://36qhytdy0v5o" path="res://scenes/player/sci-fi-spaceship-engine-idle-95668.mp3" id="7_neeni"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7j3rn"]
radius = 14.0357

[sub_resource type="Animation" id="Animation_pwsx0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-95, 70)]
}

[sub_resource type="Animation" id="Animation_kfqmo"]
resource_name = "recoil"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-95, 78), Vector2(-95, 70)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8s5wd"]
_data = {
"RESET": SubResource("Animation_pwsx0"),
"recoil": SubResource("Animation_kfqmo")
}

[sub_resource type="Curve" id="Curve_3tyq5"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0.0337079, 360), 0.0, 0.0, 0, 0, Vector2(0.988764, 360), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_d7uv8"]
_data = [Vector2(0.00561798, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ll8r0"]
_data = [Vector2(0.0617978, 0.978022), 0.0, 0.0, 0, 0, Vector2(0.99999, 0.175824), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_mask = 0
script = ExtResource("1_0y6ke")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(160.313, -134.125)
scale = Vector2(1.6875, 1.6875)
texture = ExtResource("1_6gdl2")
offset = Vector2(-95, 70)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_7j3rn")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -13)
zoom = Vector2(0.8, 0.8)

[node name="ShootingPoint" type="Marker2D" parent="."]
position = Vector2(0, -59)

[node name="ChargeBoostTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShootFrequenzyTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HeatTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootingTimeTimer" type="Timer" parent="."]
one_shot = true

[node name="TurnAccelerationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8s5wd")
}

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 0.5
one_shot = true
explosiveness = 1.0
fract_delta = false
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 800.0
angular_velocity_curve = SubResource("Curve_3tyq5")
scale_amount_min = 15.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_d7uv8")

[node name="ShootParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -43)
emitting = false
amount = 10
lifetime = 0.09
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 71.76
gravity = Vector2(0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 800.0
scale_amount_min = 5.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_ll8r0")

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_oshp0")

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wbh78")
volume_db = -7.0

[node name="Explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2mt8x")
volume_db = -7.0

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ho82w")

[node name="Engine" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_neeni")
volume_db = 8.0

[connection signal="timeout" from="ShootFrequenzyTimer" to="." method="shoot"]
[connection signal="timeout" from="HeatTimer" to="." method="kill_player"]
[connection signal="timeout" from="ShootingTimeTimer" to="." method="stop_shooting"]
[connection signal="finished" from="DeathParticles" to="." method="_on_death_particles_finished"]
